# sgx-sdk

./: .dockerignore  .gitignore  Attestation.md  Attestation.revised.md  Cargo.lock.old  Cargo.toml  Questions.md  README.md  Services.Questions.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.sgx/: README.md
__deprecated__/attestation-client/src/error/: mod.rs
__deprecated__/attestation-client/src/sgx/: mod.rs
__deprecated__/attestation-client/src/sgx_dcap_quoteverify_rs/: mod.rs
__deprecated__/evm/: Cargo.toml  package.json
__deprecated__/evm/src/: address.rs  attestation_service_structs.rs  error_lib.rs  i_switchboard.rs  i_switchboard_events.rs  std_invariant.rs  switchboard.rs  switchboard_attestation_service.rs
docker/: Dockerfile.base  Dockerfile.base.old  Dockerfile.beta  Dockerfile.dev  Dockerfile.service
docker/configs/: app.manifest.template  boot.sh
docs/: Gramine.md  Intel_SDK_Overview.md  Workfllow.md
examples/basic-example/: Anchor.toml  Cargo.toml  package.json
examples/basic-example/programs/basic-example/: Cargo.toml  expand.rs
examples/basic-example/programs/basic-example/src/: lib.rs
examples/basic-example/programs/basic-example1/: Cargo.toml
examples/basic-example/programs/basic-example1/src/: lib.rs
examples/basic-example/sgx-function/: Cargo.toml  Dockerfile
examples/basic-example/sgx-function/src/: config.rs  error.rs  fetch.rs  init.rs  main.rs  switchboard.rs
examples/basic-example/tests/: basic-example.ts
examples/binance-oracle/: Anchor.toml  Cargo.lock.bkup  Cargo.lock.bkup1  Cargo.toml  package.json
examples/binance-oracle/programs/binance-oracle/: Cargo.toml
examples/binance-oracle/programs/binance-oracle/src/: lib.rs
examples/binance-oracle/programs/binance-oracle/src/actions/: initialize.rs  mod.rs  push_data.rs
examples/binance-oracle/sgx-function/: Cargo.toml  package.json
examples/binance-oracle/sgx-function/src/: binance.rs  instruction.rs  main.rs
examples/binance-oracle/src/: lib.rs
examples/binance-oracle/src/actions/: push_data.rs
examples/binance-oracle/tests/: binance-oracle.test.ts
examples/coinbase-vwap/: Anchor.toml  Cargo.toml  package.json
examples/coinbase-vwap/sgx-function/: Cargo.toml  package.json
examples/coinbase-vwap/src/: lib.rs
examples/lava-lamp/: Anchor.toml  Cargo.lock.bkup  Cargo.toml  README.md  package.json
examples/lava-lamp/programs/flux/: Cargo.toml
examples/lava-lamp/programs/flux/src/: lib.rs
examples/lava-lamp/programs/flux/src/actions/: initialize_flux.rs  mod.rs  read_flux.rs
examples/lava-lamp/programs/lava-lamp/: Cargo.toml
examples/lava-lamp/programs/lava-lamp/src/: lib.rs
examples/lava-lamp/programs/lava-lamp/src/actions/: bubble.rs  initialize.rs  mod.rs  read_randomness.rs
examples/lava-lamp/sgx-function/: .dockerignore  Cargo.toml  package.json
examples/lava-lamp/sgx-function/src/: main.rs
examples/lava-lamp/tests/: lava-lamp.test.ts  switchboard.ts
examples/solana-event-watcher/: Cargo.toml  package.json
javascript/eslint-config/: package.json
javascript/sgx-sdk/: README.md  generate-client.js  idl.ts  package.json
javascript/sgx-sdk/scripts/: localnet.ts  localnet_up.ts
javascript/sgx-sdk/src/: SwitchboardQuoteProgram.ts  TransactionObject.ts  const.ts  index.ts
javascript/sgx-sdk/src/accounts/: account.ts  index.ts  nodeAccount.ts  permissionAccount.ts  queueAccount.ts  quoteAccount.ts
javascript/sgx-sdk/test/: attestation.test.ts  queue.test.ts  tsconfig.json  utils.ts
javascript/tsconfig/: base.json
lib/QuoteVerificationEnclave/: Makefile  package.json
lib/QuoteVerificationEnclave/App/: App.vcxproj  App.vcxproj.filters  Enclave_u.c  Enclave_u.h
lib/QuoteVerificationEnclave/Enclave/: Enclave.vcxproj  Enclave.vcxproj.filters  Enclave_t.c  Enclave_t.h
rust/attestation-client/: Cargo.toml  Dockerfile  README.md  bindings.h  build.rs  build.sh  package.json
rust/attestation-client/src/: lib.rs
rust/attestation-client/src/quote_verify/: mod.rs
rust/attestation-client/src/solana/: mod.rs
rust/common/: Cargo.toml
rust/common/src/: lib.rs
rust/common/src/sgx/: gramine.rs  mod.rs
rust/evm/: Cargo.toml  README.md
rust/evm/src/: attestation_service_error_lib.rs  core_legacy_oracle_adapter.rs  core_switchboard.rs  core_switchboard_attestation_service.rs  core_switchboard_v3.rs  i_attestation_service_events.rs  i_switchboard_attestation_service.rs  legacy_oracle_adapter.rs  lib.rs  permissions.rs  shared_types.rs  sort_lib.rs  std_style.rs  switchboard_structs.rs  switchboard_v2test.rs
rust/functions-sdk/: Cargo.toml  readme.md
rust/functions-sdk/src/: config.rs  lib.rs  switchboard.rs
rust/solana/: Cargo.toml  README.md
rust/solana/src/: lib.rs
rust/solana/src/accounts/: attestation_permission.rs  function.rs
rust/solana/src/attestation_program/accounts/: attestation_permission.rs  attestation_queue.rs  function.rs  quote.rs
rust/solana/src/attestation_program/instructions/: function_verify.rs
rust/solana/src/instructions/: function_verify.rs
rust/solana/src/oracle_program/accounts/: aggregator.rs
rust/solana/src/sdk/: aggregator.rs  function.rs  mod.rs  quote.rs  sliding_window.rs  vrf.rs
rust/solana/src/sgx/: mod.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs
rust/utils/src/task/: http.rs  websocket.rs
scripts/: attach_azure_vm.sh  create_azure_vm.sh  get_measurement.sh  publish_docker_sgx_base.sh  sync_azure_vm.sh
scripts/utils/: azure_utils.sh  ssh_utils.sh
scripts/vm/: mount_disk.sh  setup_deps.sh  setup_solana_dev.sh
