[workspace]
members = ["."]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[package]
name = "binance-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "binance_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.26.0", features = ["init-if-needed"] }
# switchboard-solana = "0.3.10"
switchboard-solana = { path = "../../../../switchboard/sbv2-solana/rust/switchboard-solana" }

