[package]
name = "solana-event-watcher"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
switchboard-attestation-client = "0.1.7"
# switchboard-attestation-client = { path = "../../rust/attestation-client" }
# switchboard-utils = "*"
switchboard-utils = { path = "../../rust/utils" }
anchor-client = "0.27.0"
solana-sdk = "1.14.18"
tokio = "1.26.0"
clokwerk = "0.4.0"
