[package]
name = "switchboard-attestation-client"
version = "0.1.7"
edition = "2021"
description = "A Rust library to interact with Switchboard V3 attestation tooling"
license = "MIT"
homepage = "https://docs.switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sbv2-solana/tree/main/rust/switchboard-v2"
documentation = "https://switchboard-xyz.github.io/switchboard-attestation-client.github.io/switchboard_attestation_client/index.html"

[package.metadata.docs.rs]
include = ["doc/*"]

[dependencies]
arrayref = "0.3.6"
base64 = "0.21.0"
bs58 = "0.4.0"
bytemuck = "1.13.1"
getrandom = "0.2.8"
hex = "0.4.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = "1.0.152"
serde_json = "1.0.93"
sgx-quote = "0.1.0"
sgx_types = "1.1.2"
sha2 = "0.10.6"
tokio = "1.26.0"

anchor-client = "0.27.0"
solana-sdk = "1.14.18"

[build-dependencies]
bindgen = "0.60.1"
