[package]
name = "switchboard-evm"
version = "0.1.0"
edition = "2021"
description = "A Rust library to interact with Switchboard accounts on EVM chains."
readme = "README.md"
keywords = ["switchboard", "oracle", "evm", "solidity"]
homepage = "https://docs.switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sgx-sdk/tree/main/rust/evm"
documentation = "https://docs.switchboard.xyz"

[dependencies]
# switchboard-common = { path = "../common" }
ethers = { version = "2", default-features = false, features = ["abigen"] }

