[package]
name = "switchboard-solana"
version = "0.1.0"
edition = "2021"
description = "A Rust library to interact with Switchboard V2 accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://docs.switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sgx-sdk/tree/main/rust/common"
documentation = "https://docs.rs/switchboard-v2/"

[dependencies]
switchboard-common = { path = "../common" }

bytemuck = "1.13.1"
rust_decimal = "=1.26.1"
superslice = "1"

# anchor-lang= "0.27.0"
# anchor-client = "0.27.0"
# anchor-spl = "0.27.0"
# https://github.com/coral-xyz/anchor/issues/2502
anchor-lang = { git = "https://github.com/coral-xyz/anchor", version = "0.27.0" }
anchor-client = { git = "https://github.com/coral-xyz/anchor", version = "0.27.0" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", version = "0.27.0" }


# solana-sdk = "^1.13.5"
# solana-program = "^1.13.5"
solana-sdk = "1.14"
solana-program = "1.14"
toml_datetime = "=0.6.1"

