[package]
name = "binance-oracle-function"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# switchboard-solana = "0.3.10"
switchboard-solana = { path = "../../../../../switchboard/sbv2-solana/rust/switchboard-solana" }
tokio = "1.26.0"
futures = "0.3.28"
chrono = "0.4.24"
reqwest = { version = "0.11.18", features = [
    "rustls-tls"
], default-features = false }
serde = "1.0.160"
serde_json = "1.0.96"
binance-oracle = { path = "../", features = ["no-entrypoint"] }
