[package]
name = "lava-lamp-function"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
switchboard-common = { version = "0.1.1", features = ["sgx"] }
switchboard-solana = { version = "0.3.1", features = ["client"] }
lava-lamp = { path = "../programs/lava-lamp" }
tokio = "1.26.0"
clokwerk = "0.4.0"
futures = "0.3.28"
chrono = "0.4.24"
# simple_logger = "4"
# log = "0.4.17"
anchor-lang = "0.28.0"
solana-program = "=1.14.18"