[package]
name = "weather-station"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "weather_station"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.27.0", features = [] }
bytemuck = "1.13.1"
switchboard-solana = "*"