[package]
name = "lava-lamp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lava_lamp"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "=0.28.0", features = [] }
anchor-spl = { version = "=0.28.0", features = [] }
bytemuck = "1.13.1"
switchboard-solana = "0.3.1"